Clean code to improve code quality